# fnn

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: predict_xor.rs
src/: activator.rs  lib.rs
