[package]
name = "fnn"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple Feedforward Neural Network library for Rust"
repository = "https://github.com/LiamGallagher737/fnn"
readme = "README.md"
categories = ["no-std", "no-std::no-alloc", "mathematics", "science"]
keywords = ["feedforward", "neural-network", "no_std"]
authors = ["Liam Gallagher <liam@liamgallagher.dev>"]
exclude = [".github"]

[features]
default = []
serde = ["dep:serde", "nalgebra/serde-serialize-no-std"]

[dependencies]
nalgebra = { version = "0.33.0", default-features = false, features = ["libm"] }
libm = "0.2.0"
serde = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
